--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,19 @@
   "manifest_version": 2,
  
   "name": "Auction Tracker",
-  "description": "This extension will log an auction listing.",
+  "description": "Log an auction listing.",
   "version": "0.1",
+
+  "background": {
+    "scripts":["eventPage.js"],
+    "persistent": false
+  },
  
-  "page_action": {
+  "browser_action": {
    "default_icon": "icon.png",
    "default_title": "Auction Tracker"
   },
   "permissions": [
-   "activeTab"
+   "activeTab", "http://*/*"
    ]
 }
