--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,11 @@
     "scripts":["eventPage.js"],
     "persistent": false
   },
+
+  "content_scripts": [{
+    "matches": ["*://*.pbagalleries.com/*"],
+    "js": ["content.js"]
+    }],
  
   "browser_action": {
    "default_icon": "icon.png",
